# resume_ner

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yaml  hello_world.py  pyproject.toml  resume_ner.db  run.py
alembic/: env.py
alembic/versions/: 2025_12_25_2254-402b29d80f39.py
app/: __init__.py  cmd.py  main.py
app/api/: dependencies.py  endpoints.py
app/asgi/: app.py  state.py
app/asgi/auth/: deps.py  utils.py
app/asgi/routers/: auth.py  forward.py  history.py  stats.py  users.py
app/asgi/schemas/: forward.py  history.py  stats.py  users.py
app/config/: auth.py  db.py  ml.py  settings.py
app/core/: config.py  models.py  security.py
app/database/: crud.py  session.py
app/databases/: crud.py
app/db/: helper.py  models.py
app/db/mixins/: created_at.py
app/ml/: model.py  ner_service.py  schema.py
app/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py
models/resume_ner_model/ner/: moves
notebooks/: EDA.ipynb  ML.ipynb
notebooks/junk/: Mehyaar_EDA.ipynb
resume_ner_model/: meta.json
resume_ner_model/ner/: model
scripts/: check_model.py  init_db.py  reset_model.py  train_model.py
tools/: create_mock_users.py
