[project]
name = "resume-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "wordcloud>=1.9.4",
]
